mala poprawka dla zestawow emotikonow
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3806 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -67,7 +67,7 @@ module_notify=y
 # Description: Notification by window module
 # PL: Powiadamianie za pomoc± wyskakuj±cego okienka
 # Depends: notify
-module_window_notify=m
+module_window_notify=n
 
 # Description: Notification by hints module
 # PL: Powiadamianie za pomoc± dymków
@@ -92,12 +92,12 @@ module_sound=y
 # PL: Obs³uga d¼wiêku przez ALSÊ
 # Needs: libasound
 # Depends: sound
-module_alsa_sound=n
+module_alsa_sound=m
 
 # Description: Direct /dev/dsp sound support (Open Sound System)
 # PL: Obs³uga d¼wiêku przez bezpo¶redni dostêp do urz±dzenia /dev/dsp (Open Sound System)
 # Depends: sound
-module_dsp_sound=m
+module_dsp_sound=n
 
 # Description: aRts sound server support
 # PL: Obs³uga d¼wiêku przez serwer aRts
@@ -120,7 +120,7 @@ module_nas_sound=n
 # Description: External application sound support
 # PL: Obs³uga d¼wiêku poprzez zewnêtrzn± aplikacjê
 # Depends: sound
-module_ext_sound=m
+module_ext_sound=n
 
 ###################### p2p ###########################################
 # PL: ################ po³±czenia bezpo¶rednie #######################
@@ -164,7 +164,7 @@ module_autoaway=m
 # Description: Configuration wizard module
 # PL: Modu³ konfiguracji Kadu za pomoc± wizarda (kreatora)
 # Depends: account_management sound hints
-module_config_wizard=m
+module_config_wizard=n
 
 # Description: Migration utility
 # PL: Narzêdzie do migracji
@@ -222,7 +222,7 @@ module_mail=n
 # Description: Spellchecking in chat window
 # PL: Sprawdzanie b³êdów pisowni w oknie rozmowy
 # Needs: libaspell
-module_spellchecker=n
+module_spellchecker=m
 
 # Description: PC-Speaker support
 # PL: Powiadamianie przy pomocy PC-Speakera
@@ -353,4 +353,4 @@ emoticons_default=y
 
 # Description: Old Gadu-Gadu 6.x emoticons
 # PL: Kompatybilne ze star± wersj± Gadu-Gadu 6.x
-emoticons_gg6_compatible=n
+emoticons_gg6_compatible=y
