--- a/.config
+++ b/.config
@@ -349,7 +349,7 @@ icons_glass22=n
 
 # Description: Default emoticon theme shipped with sources
 # PL: Standardowy zestaw emotikon dostêpny razem ze ¼ród³ami Kadu
-emoticons_default=y
+emoticons_penguins=y
 
 # Description: Old Gadu-Gadu 6.x emoticons
 # PL: Kompatybilne ze star± wersj± Gadu-Gadu 6.x
