few corrections for new default emoticons theme
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3867 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/Makefile.am
+++ b/varia/Makefile.am
@@ -28,6 +28,9 @@ install-data-local: uninstall-local
 			$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/themes/emoticons/$$e_t/$$e_d"; \
 			$(INSTALL_DATA) themes/emoticons/$$e_t/$$e_d/* "$(DESTDIR)$(datadir)/kadu/themes/emoticons/$$e_t/$$e_d"; \
 		done; \
+		if test -z "$$e_dirs"; then \
+			$(INSTALL_DATA) themes/emoticons/$$e_t/* "$(DESTDIR)$(datadir)/kadu/themes/emoticons/$$e_t/"; \
+		fi; \
 	done
 
 	$(mkinstalldirs) "$(DESTDIR)$(bindir)/"	
