new module: profiles
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/branches/0.4@3897 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -289,6 +289,10 @@ module_osdhints_notify=n
 # PL: Informuje o dostêpno¶ci kontaktu, na który czekamy.
 module_iwait4u=n
 
+# Description: Profiles support
+# PL: Klikalna obs³uga profili
+module_profiles=n
+
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
 
