3 new modules: filtering, powerkadu, profiles
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3898 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -295,6 +295,18 @@ module_iwait4u=n
 # PL: Modu³ powiadamiania o zdarzeniach za pomoc± zewnêtrznych poleceñ
 module_exec_notify=n
 
+# Description: Power Kadu
+# PL: Power Kadu
+module_powerkadu=n
+
+# Description: User list filtering
+# PL: Filtrowanie listy kontaktów
+module_filtering=n
+
+# Description: Profiles support
+# PL: Klikalna obs³uga profili
+module_profiles=n
+
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
 
