fix for OpenBSD
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3905 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/configure.ac
+++ b/configure.ac
@@ -102,7 +102,7 @@ AC_DEFUN(FIND_HEADER,[
 AC_DEFUN(FIND_LIBRARY,[
 	AC_MSG_CHECKING([if lib$1 is in system directories])
 	save_CFLAGS="$CFLAGS"
-	CFLAGS="$CFLAGS $5 -l$1"
+	CFLAGS="$CFLAGS $5 -l$1 -lstdc++ -lm"
 	AC_TRY_LINK([],
 	[
 		return 0;
@@ -117,7 +117,7 @@ AC_DEFUN(FIND_LIBRARY,[
 		FILE_DIR=
 		for dir in $with_libs $2
 		do
-			CFLAGS="$save_CFLAGS $5 -L$dir -l$1"
+			CFLAGS="$save_CFLAGS $5 -L$dir -l$1 -lstdc++ -lm"
 			AC_TRY_LINK([],
 			[
 				return 0;
