preserve permissions to .so files
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3917 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -437,7 +437,7 @@ $(install_targets):
 		done; \
 	fi; \
 	if test -z `expr " $(static_modules) " : ".* \($$dir\) "`; then \
-		$(INSTALL_DATA) $$dir/$$dir.$(SO_EXT) "$(DESTDIR)$(libdir)/kadu/modules/"; \
+		$(INSTALL_PROGRAM) $$dir/$$dir.$(SO_EXT) "$(DESTDIR)$(libdir)/kadu/modules/"; \
 	fi
 
 uninstall-local:
