make clean, distclean in module dirs; "no such file or directory" error in generation of dependency files when --enable-final is in use
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3953 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/configure.ac
+++ b/configure.ac
@@ -312,7 +312,7 @@ AC_DEFUN(PROCESS_MODULE_SPEC_FILES,[
 			echo "MODULE_LDFLAGS:        $MODULE_LDFLAGS" && \
 			echo "MODULE_TOOLS:          $MODULE_TOOLS" && \
 			echo "MODULE_CONFIGURE_CMD:  $MODULE_CONFIGURE_CMD" && \
-			echo -e "all:\n\t cd ..; make module_$mod; cd $mod\n\ninstall:\n\tcd ..; make module_$mod install_$mod; cd $mod\nclean:\n\trm -f *.o *.d *.so *.a *_moc.cpp translations/*.qm\n" > modules/$mod/Makefile && \
+			echo -e "all:\n\t cd ..; make module_$mod; cd $mod\n\ninstall:\n\tcd ..; make module_$mod install_$mod; cd $mod\n\nclean:\n\trm -f *.o *.d *.so *.a *_moc.cpp .final.d .final.cpp.o .final.c.o\n\ndistclean: clean\n\trm -f .cxxflags .ldflags .final.cpp .final.c translations/*.qm\n" > modules/$mod/Makefile && \
 			
 			if test $enable_final == yes; then \
 				for src in $MODULE_SOURCES; do \
