--- a/.config
+++ b/.config
@@ -307,6 +307,10 @@ module_filtering=n
 # PL: Klikalna obs³uga profili
 module_profiles=n
 
+# Description: User list: support for priorities (VIP/NIP) and changing order of sorting functions
+# PL: Obs³uga priorytetów (VIP/NIP) oraz zmiany kryteriów sortowania listy kontaktów
+module_advanced_userlist=n
+
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
 
