--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -66,6 +66,7 @@ EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 GADU_INCLUDES = @GADU_INCLUDES@
 GADU_LIBS = @GADU_LIBS@
+GREP = @GREP@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
@@ -109,7 +110,6 @@ VERSION = @VERSION@
 Z_LIBS = @Z_LIBS@
 ac_ct_CC = @ac_ct_CC@
 ac_ct_CXX = @ac_ct_CXX@
-ac_ct_STRIP = @ac_ct_STRIP@
 am__leading_dot = @am__leading_dot@
 bindir = @bindir@
 build = @build@
@@ -118,6 +118,9 @@ build_cpu = @build_cpu@
 build_os = @build_os@
 build_vendor = @build_vendor@
 datadir = @datadir@
+datarootdir = @datarootdir@
+docdir = @docdir@
+dvidir = @dvidir@
 enable_dependency_tracking = @enable_dependency_tracking@
 enable_final = @enable_final@
 enable_pheaders = @enable_pheaders@
@@ -129,16 +132,20 @@ host_alias = @host_alias@
 host_cpu = @host_cpu@
 host_os = @host_os@
 host_vendor = @host_vendor@
+htmldir = @htmldir@
 includedir = @includedir@
 infodir = @infodir@
 install_sh = @install_sh@
 libdir = @libdir@
 libexecdir = @libexecdir@
+localedir = @localedir@
 localstatedir = @localstatedir@
 mandir = @mandir@
 oldincludedir = @oldincludedir@
+pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
+psdir = @psdir@
 sbindir = @sbindir@
 shared_modules = @shared_modules@
 sharedstatedir = @sharedstatedir@
@@ -410,6 +417,9 @@ install-data-local: uninstall-local make_module_dirs $(install_targets)
 
 $(install_targets):
 	@dir=`echo $@ | sed s/install_//` && \
+	if [ ! -d "$(DESTDIR)$(includedir)/kadu/modules/" ]; then \
+		make make_module_dirs; \
+	fi && \
 	echo -e "\033[32m>>>\033[0m Installing $$dir module ..."; \
 	$(INSTALL_DATA) $$dir/$$dir.desc "$(DESTDIR)$(datadir)/kadu/modules"; \
 	$(INSTALL_DATA) $$dir/*.h "$(DESTDIR)$(includedir)/kadu/modules"; \
