remove pending_events.h from kadu-headers.h
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4030 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/configure.ac
+++ b/configure.ac
@@ -824,7 +824,7 @@ if test -z "$enable_pheaders"; then
 fi
 if test "$enable_pheaders" = "yes"; then
 	rm -f kadu/kadu-headers.h2
-	for i in kadu-config.h `ls -1 kadu | grep "\.h$" | grep -v "kadu-headers.h"`; do
+	for i in kadu-config.h `ls -1 kadu | grep "\.h$" | grep -v "kadu-headers.h" | grep -v "pending_events.h"`; do
 		echo "#include \"$i\"" >> kadu/kadu-headers.h2
 	done
 	grep -h '#include <q[^>]*>' kadu/*.cpp | sort -u >> kadu/kadu-headers.h2
