sizeable changes in sms window
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4047 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -84,6 +84,7 @@ Warning=msgbox_warning.png
 LoadingImage=loading.png
 AboutIcon=abouticon.png
 CloseWindow=stop.png
+SendSMSButton=forward.png
 
 NextSearchResults=forward.png
 ClearSearchResults=eraser.png
