use c++ compiler instead of c...
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4086 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/Makefile.in
+++ b/Makefile.in
@@ -46,9 +46,9 @@ AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
 CC = @CC@
 CFLAGS = @CFLAGS@
-CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CXX = @CXX@
+CXXCPP = @CXXCPP@
 CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
