--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -51,9 +51,9 @@ AWK = @AWK@
 CC = @CC@
 
 CFLAGS = @CFLAGS@
-CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CXX = @CXX@
+CXXCPP = @CXXCPP@
 
 CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
