more precise version in about window
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4114 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/configure.ac
+++ b/configure.ac
@@ -899,6 +899,13 @@ if test -z "$enable_autodownload"; then
 	enable_autodownload=yes
 fi
 
+if test -f SNAPSHOT; then
+	snapshot=yes
+else
+	snapshot=no
+fi
+AC_SUBST(snapshot)
+
 # OpenSSL support
 # Maybe it will be back when GG servers have SSL support finally
 #AC_CHECK_OPENSSL
