--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -143,6 +143,7 @@ psdir = @psdir@
 sbindir = @sbindir@
 shared_modules = @shared_modules@
 sharedstatedir = @sharedstatedir@
+snapshot = @snapshot@
 static_modules = @static_modules@
 static_modules_ldflags = @static_modules_ldflags@
 subdirs = @subdirs@
@@ -308,7 +309,8 @@ moc/userinfo_moc.cpp \
 moc/userlist_moc.cpp \
 moc/userlist-private_moc.cpp \
 moc/usergroup_moc.cpp \
-moc/userlistelement_moc.cpp
+moc/userlistelement_moc.cpp \
+version.cpp
 
 
 am_kadu_OBJECTS = \
@@ -364,6 +366,7 @@ obj/userlist-private.$(OBJEXT) \
 obj/usergroup.$(OBJEXT) \
 obj/userlistelement.$(OBJEXT) \
 obj/updates.$(OBJEXT) \
+obj/version.$(OBJEXT) \
 obj/about_moc.$(OBJEXT) \
 obj/action_moc.$(OBJEXT) \
 obj/chat_moc.$(OBJEXT) \
@@ -856,6 +859,22 @@ kadu$(EXEEXT): $(kadu_OBJECTS) $(kadu_DEPENDENCIES)
 	@rm -f kadu$(EXEEXT)
 	$(CXXLINK) $(kadu_LDFLAGS) $(kadu_OBJECTS) $(kadu_LDADD) $(LIBS)
 
+ endif
+
+ ifeq ($(snapshot),yes)
+version.cpp: ../SNAPSHOT
+	@echo "const char *detailed_version = \"`cat ../SNAPSHOT`\";" > $@;
+ else
+version.cpp: $(kadu_SOURCES) *.h ../modules/*/*.h ../modules/*/*.cpp ../libgadu/lib/*.c ../libgadu/lib/*.h
+	@core_ver=`svnversion -n .`; \
+	mod_ver=`svnversion -n ../modules`; \
+	lg_ver=`svnversion -n ../libgadu`; \
+	if [ "$$core_ver" != "$$mod_ver" -o "$$core_ver" != "$$lg_ver" -o "$$mod_ver" != "$$lg_ver" ]; then \
+		ver="core:$$core_ver modules:$$mod_ver libgadu:$$lg_ver"; \
+	else \
+		ver="$$core_ver"; \
+	fi; \
+	echo "const char *detailed_version = \"$$ver\";" | diff -q - $@ >/dev/null 2>/dev/null || echo "const char *detailed_version = \"$$ver\";" > $@;
  endif
 
 # dirty hack - leading space required because od automake "if" support
