nowy modul history, akcja pokazujaca dialog historii przeniesiona do modulu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4161 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -152,6 +152,10 @@ module_default_sms=m
 # PL: Obs³uga rejestracji / wyrejestrowywania konta, przypominania / zmiany has³a
 module_account_management=m
 
+# Description: Chat history storing, browsing and searching support
+# PL: Obs³uga przechowywania historii rozmów, przegl±dania i wyszukiwania w niej
+module_history=m
+
 # Description: OpenSSL encrypted chat support
 # PL: Obs³uga szyfrowania wiadomo¶ci przy pomocy OpenSSLa
 # Needs: libcrypto, libssl
