new signals in chatManager class
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4174 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -43,13 +43,13 @@ module_x11_docking=m
 # PL: Modu³ obs³ugi dokowania w WindowMakerze
 # Needs: libX11
 # Depends: docking
-module_wmaker_docking=n
+module_wmaker_docking=m
 
 # Description: Always on top window docking module
 # PL: Modu³ s³u¿±cy symulacji dokowania przy pomocy ma³ego okna
 # PL: (bez ramek i z ustawion± flag± "Zawsze na wierzchu")
 # Depends: docking
-module_desktop_docking=n
+module_desktop_docking=m
 
 # Description: MacOS X docking module
 # PL: Modu³ s³u¿±cy symulacji dokowania na MacOS X
@@ -77,7 +77,7 @@ module_hints=m
 # Description: Speech synthesis support ("powiedz")
 # PL: Powiadamianie mow± za pomoc± programu "powiedz"
 # Depends: notify
-module_speech=n
+module_speech=m
 
 ##################### sound ##########################################
 # PL: ############### d¼wiêk #########################################
@@ -92,7 +92,7 @@ module_sound=y
 # PL: Obs³uga d¼wiêku przez ALSÊ
 # Needs: libasound
 # Depends: sound
-module_alsa_sound=n
+module_alsa_sound=m
 
 # Description: Direct /dev/dsp sound support (Open Sound System)
 # PL: Obs³uga d¼wiêku przez bezpo¶redni dostêp do urz±dzenia /dev/dsp (Open Sound System)
@@ -103,13 +103,13 @@ module_dsp_sound=m
 # PL: Obs³uga d¼wiêku przez serwer aRts
 # Needs: libartsc
 # Depends: sound
-module_arts_sound=n
+module_arts_sound=m
 
 # Description: ESD sound server support
 # PL: Obs³uga d¼wiêku przez serwer ESD
 # Needs: libesd
 # Depends: sound
-module_esd_sound=n
+module_esd_sound=m
 
 # Description: Network Audio System support
 # PL: Obs³uga d¼wiêku przez Network Audio System
@@ -168,7 +168,7 @@ module_autoaway=m
 # Description: Configuration wizard module
 # PL: Modu³ konfiguracji Kadu za pomoc± wizarda (kreatora)
 # Depends: account_management sound hints
-module_config_wizard=m
+module_config_wizard=n
 
 # Description: Migration utility
 # PL: Narzêdzie do migracji
@@ -212,11 +212,11 @@ module_xmms=n
 # Description: AmaroK player support
 # PL: Obs³uga statusów pobieranych z Amaroka
 # Needs: libkdecore
-module_amarok=n
+module_amarok=m
 
 # Description: Description from file module
 # PL: Obs³uga statusów pobieranych z pliku
-module_filedesc=n
+module_filedesc=m
 
 # Description: Mail checker module
 # PL: Powiadamianie o nowej poczcie
@@ -271,7 +271,7 @@ module_miastoplusa_sms=n
 
 # Description: Tabbed chat dialog module
 # PL: Modu³ okna rozmowy z zak³adkami
-module_tabs=n
+module_tabs=m
 
 # Description: Notification by Scroll Lock LED
 # PL: Powiadamiania diod± Scroll Lock
@@ -281,15 +281,15 @@ module_led_notify=n
 
 # Description: 
 # PL: Dodaje mo¿liwo¶æ zaznaczenia fragmentu ekranu i wys³ania obrazka z jego zawarto¶ci±
-module_screenshot=n
+module_screenshot=m
 
 # Description: Notification by OSD-like hints
 # PL: Powiadamianie o zdarzeniach przy pomocy dymków typu OSD
-module_osdhints_notify=n
+module_osdhints_notify=m
 
 # Description: Protection against unwanted chats
 # PL: Ochrona przed "klikaczami"
-module_firewall=n
+module_firewall=m
 
 # Description: Shows message, when user you're waiting for is online.
 # PL: Informuje o dostêpno¶ci kontaktu, na który czekamy.
@@ -305,15 +305,15 @@ module_powerkadu=n
 
 # Description: User list filtering
 # PL: Filtrowanie listy kontaktów
-module_filtering=n
+module_filtering=m
 
 # Description: Profiles support
 # PL: Klikalna obs³uga profili
-module_profiles=n
+module_profiles=m
 
 # Description: User list: support for priorities (VIP/NIP) and changing order of sorting functions
 # PL: Obs³uga priorytetów (VIP/NIP) oraz zmiany kryteriów sortowania listy kontaktów
-module_advanced_userlist=n
+module_advanced_userlist=m
 
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
