--- a/kadu-core/Makefile.in
+++ b/kadu-core/Makefile.in
@@ -199,6 +199,7 @@ protocol.cpp \
 protocols_manager.cpp \
 search.cpp \
 status.cpp \
+status_changer.cpp \
 tabbar.cpp \
 themes.cpp \
 toolbar.cpp \
@@ -255,6 +256,7 @@ protocol.h \
 protocols_manager.h \
 search.h \
 status.h \
+status_changer.h \
 tabbar.h \
 themes.h \
 toolbar.h \
@@ -299,6 +301,7 @@ moc/protocol_moc.cpp \
 moc/protocols_manager_moc.cpp \
 moc/search_moc.cpp \
 moc/status_moc.cpp \
+moc/status_changer_moc.cpp \
 moc/tabbar_moc.cpp \
 moc/themes_moc.cpp \
 moc/toolbar_moc.cpp \
@@ -355,6 +358,7 @@ obj/protocol.$(OBJEXT) \
 obj/protocols_manager.$(OBJEXT) \
 obj/search.$(OBJEXT) \
 obj/status.$(OBJEXT) \
+obj/status_changer.$(OBJEXT) \
 obj/tabbar.$(OBJEXT) \
 obj/themes.$(OBJEXT) \
 obj/toolbar.$(OBJEXT) \
@@ -397,6 +401,7 @@ obj/protocol_moc.$(OBJEXT) \
 obj/protocols_manager_moc.$(OBJEXT) \
 obj/search_moc.$(OBJEXT) \
 obj/status_moc.$(OBJEXT) \
+obj/status_changer_moc.$(OBJEXT) \
 obj/tabbar_moc.$(OBJEXT) \
 obj/themes_moc.$(OBJEXT) \
 obj/toolbar_moc.$(OBJEXT) \
