usunieto nieuzywane i nieaktualne pending_events.cpp/h
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4185 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/configure.ac
+++ b/configure.ac
@@ -848,7 +848,7 @@ if test -z "$enable_pheaders"; then
 fi
 if test "$enable_pheaders" = "yes"; then
 	rm -f kadu-core/kadu-headers.h2
-	for i in kadu-config.h `ls -1 kadu-core | grep "\.h$" | grep -v "kadu-headers.h" | grep -v "pending_events.h"`; do
+	for i in kadu-config.h `ls -1 kadu-core | grep "\.h$" | grep -v "kadu-headers.h"`; do
 		echo "#include \"$i\"" >> kadu-core/kadu-headers.h2
 	done
 	grep -h '#include <q[^>]*>' kadu-core/*.cpp | sort -u >> kadu-core/kadu-headers.h2
