notyfikacje "Zmiana statusu na..." zamieniona w klasę pochodną od Notification
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4211 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/sounds/default/sound.conf
+++ b/varia/themes/sounds/default/sound.conf
@@ -1,9 +1,9 @@
 [sounds]
 Message=msg.wav
 Chat=msg.wav
-StatusAvailable=msg.wav
-StatusBusy=msg.wav
-StatusNotAvailable=msg.wav
-StatusInvisible=msg.wav
+StatusChanged/ToOnline=msg.wav
+StatusChanged/ToBusy=msg.wav
+StatusChanged/ToInvisible=msg.wav
+StatusChanged/ToOffline=msg.wav
 ConnectionError=msg.wav
 OtherMessage=msg.wav
