notyfikacje "Nowa wiadomość/rozmowa" zamienione w klasy pochodne od Notification, grupowanie wiadomości w dymkach
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4212 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/sounds/default/sound.conf
+++ b/varia/themes/sounds/default/sound.conf
@@ -1,6 +1,6 @@
 [sounds]
-Message=msg.wav
-Chat=msg.wav
+NewMessage=msg.wav
+NewChat=msg.wav
 StatusChanged/ToOnline=msg.wav
 StatusChanged/ToBusy=msg.wav
 StatusChanged/ToInvisible=msg.wav
