dcc: poprawiono błąd [0000380]: dźwięki w kadu dla zdarzeń związanych z transferami plików
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4241 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/sounds/default/sound.conf
+++ b/varia/themes/sounds/default/sound.conf
@@ -6,4 +6,5 @@ StatusChanged/ToBusy=msg.wav
 StatusChanged/ToInvisible=msg.wav
 StatusChanged/ToOffline=msg.wav
 ConnectionError=msg.wav
-OtherMessage=msg.wav
+FileTransfer/IncomingFile=msg.way
+FileTransfer/Finished=msg.wav
