mozliwosc okreslenia klienta poczty
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4251 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -32,6 +32,7 @@ HideKadu=hide.png
 Exit=exit.png
 
 OpenChat=chat16.png
+WriteEmail=message.png
 RemoveFromUserlist=deluser.png
 ClearHistory=erasehistory.png
 History=history.png
