nowe okno konfiguracji - wstęp
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4259 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/configure.ac
+++ b/configure.ac
@@ -29,7 +29,7 @@ AC_DEFUN(CHECK_PTHREAD,
 			PTHREAD_LIBS=
 		],[
 			AC_MSG_RESULT(no)
-			AC_MSG_ERROR([Your system is not supporting pthreads!])
+			AC_MSG_ERROR([Your system does not support pthreads!])
 		])
 		CPPFLAGS="$save_CPPFLAGS"
 	])
