--- a/kadu-core/Makefile.am
+++ b/kadu-core/Makefile.am
@@ -11,8 +11,9 @@ chat_manager.cpp \
 chat_manager_slots.cpp \
 chat_message.cpp \
 chat_styles.cpp \
+color_button.cpp \
 color_selector.cpp \
-config_dialog.cpp \
+configuration_window.cpp \
 config_file.cpp \
 custom_input.cpp \
 debug.cpp \
@@ -25,6 +26,7 @@ gadu-private.cpp \
 gadu_images_manager.cpp \
 gadu_rich_text.cpp \
 groups_manager.cpp \
+hot_key.cpp \
 html_document.cpp \
 http_client.cpp \
 icons_manager.cpp \
@@ -37,13 +39,16 @@ main.cpp \
 message_box.cpp \
 misc.cpp \
 modules.cpp \
+path_list_edit.cpp \
 pending_msgs.cpp \
 personal_info.cpp \
 protocol.cpp \
 protocols_manager.cpp \
 search.cpp \
+select_font.cpp \
 status.cpp \
 status_changer.cpp \
+syntax_editor.cpp \
 tabbar.cpp \
 themes.cpp \
 toolbar.cpp \
@@ -68,8 +73,9 @@ chat_manager.h \
 chat_manager_slots.h \
 chat_message.h \
 chat_styles.h \
+color_button.h \
 color_selector.h \
-config_dialog.h \
+configuration_window.h \
 config_file.h \
 custom_input.h \
 debug.h \
@@ -82,6 +88,7 @@ gadu-private.h \
 gadu_images_manager.h \
 gadu_rich_text.h \
 groups_manager.h \
+hot_key.h \
 html_document.h \
 http_client.h \
 icons_manager.h \
@@ -93,13 +100,16 @@ kadu_text_browser.h \
 message_box.h \
 misc.h \
 modules.h \
+path_list_edit.h \
 pending_msgs.h \
 personal_info.h \
 protocol.h \
 protocols_manager.h \
 search.h \
+select_font.h \
 status.h \
 status_changer.h \
+syntax_editor.h \
 tabbar.h \
 themes.h \
 toolbar.h \
@@ -118,8 +128,9 @@ moc/action_moc.cpp \
 moc/chat_moc.cpp \
 moc/chat_manager_moc.cpp \
 moc/chat_manager_slots_moc.cpp \
+moc/color_button_moc.cpp \
 moc/color_selector_moc.cpp \
-moc/config_dialog_moc.cpp \
+moc/configuration_window_moc.cpp \
 moc/custom_input_moc.cpp \
 moc/dnshandler_moc.cpp \
 moc/dockarea_moc.cpp \
@@ -136,13 +147,16 @@ moc/kadu_text_browser_moc.cpp \
 moc/message_box_moc.cpp \
 moc/misc_moc.cpp \
 moc/modules_moc.cpp \
+moc/path_list_edit_moc.cpp \
 moc/pending_msgs_moc.cpp \
 moc/personal_info_moc.cpp \
 moc/protocol_moc.cpp \
 moc/protocols_manager_moc.cpp \
 moc/search_moc.cpp \
+moc/select_font_moc.cpp \
 moc/status_moc.cpp \
 moc/status_changer_moc.cpp \
+moc/syntax_editor_moc.cpp \
 moc/tabbar_moc.cpp \
 moc/themes_moc.cpp \
 moc/toolbar_moc.cpp \
@@ -165,9 +179,10 @@ obj/chat_manager.$(OBJEXT) \
 obj/chat_manager_slots.$(OBJEXT) \
 obj/chat_message.$(OBJEXT) \
 obj/chat_styles.$(OBJEXT) \
+obj/color_button.$(OBJEXT) \
 obj/color_selector.$(OBJEXT) \
-obj/config_dialog.$(OBJEXT) \
 obj/config_file.$(OBJEXT) \
+obj/configuration_window.$(OBJEXT) \
 obj/custom_input.$(OBJEXT) \
 obj/debug.$(OBJEXT) \
 obj/dnshandler.$(OBJEXT) \
@@ -179,6 +194,7 @@ obj/gadu-private.$(OBJEXT) \
 obj/gadu_images_manager.$(OBJEXT) \
 obj/gadu_rich_text.$(OBJEXT) \
 obj/groups_manager.$(OBJEXT) \
+obj/hot_key.$(OBJEXT) \
 obj/html_document.$(OBJEXT) \
 obj/http_client.$(OBJEXT) \
 obj/icons_manager.$(OBJEXT) \
@@ -191,13 +207,16 @@ obj/main.$(OBJEXT) \
 obj/message_box.$(OBJEXT) \
 obj/misc.$(OBJEXT) \
 obj/modules.$(OBJEXT) \
+obj/path_list_edit.$(OBJEXT) \
 obj/pending_msgs.$(OBJEXT) \
 obj/personal_info.$(OBJEXT) \
 obj/protocol.$(OBJEXT) \
 obj/protocols_manager.$(OBJEXT) \
 obj/search.$(OBJEXT) \
+obj/select_font.$(OBJEXT) \
 obj/status.$(OBJEXT) \
 obj/status_changer.$(OBJEXT) \
+obj/syntax_editor.$(OBJEXT) \
 obj/tabbar.$(OBJEXT) \
 obj/themes.$(OBJEXT) \
 obj/toolbar.$(OBJEXT) \
@@ -215,9 +234,10 @@ obj/action_moc.$(OBJEXT) \
 obj/chat_moc.$(OBJEXT) \
 obj/chat_manager_moc.$(OBJEXT) \
 obj/chat_manager_slots_moc.$(OBJEXT) \
+obj/color_button_moc.$(OBJEXT) \
 obj/color_selector_moc.$(OBJEXT) \
-obj/config_dialog_moc.$(OBJEXT) \
 obj/custom_input_moc.$(OBJEXT) \
+obj/configuration_window_moc.$(OBJEXT) \
 obj/dnshandler_moc.$(OBJEXT) \
 obj/dockarea_moc.$(OBJEXT) \
 obj/emoticons_moc.$(OBJEXT) \
@@ -233,13 +253,16 @@ obj/kadu_text_browser_moc.$(OBJEXT) \
 obj/message_box_moc.$(OBJEXT) \
 obj/misc_moc.$(OBJEXT) \
 obj/modules_moc.$(OBJEXT) \
+obj/path_list_edit_moc.$(OBJEXT) \
 obj/pending_msgs_moc.$(OBJEXT) \
 obj/personal_info_moc.$(OBJEXT) \
 obj/protocol_moc.$(OBJEXT) \
 obj/protocols_manager_moc.$(OBJEXT) \
 obj/search_moc.$(OBJEXT) \
+obj/select_font_moc.$(OBJEXT) \
 obj/status_moc.$(OBJEXT) \
 obj/status_changer_moc.$(OBJEXT) \
+obj/syntax_editor_moc.$(OBJEXT) \
 obj/tabbar_moc.$(OBJEXT) \
 obj/themes_moc.$(OBJEXT) \
 obj/toolbar_moc.$(OBJEXT) \
@@ -269,10 +292,12 @@ include $(DEPS)/chat_manager_slots.d
 include $(DEPS)/chat_manager_slots_moc.d
 include $(DEPS)/chat_message.d
 include $(DEPS)/chat_styles.d
+include $(DEPS)/color_button.d
+include $(DEPS)/color_button_moc.d
 include $(DEPS)/color_selector.d
 include $(DEPS)/color_selector_moc.d
-include $(DEPS)/config_dialog.d
-include $(DEPS)/config_dialog_moc.d
+include $(DEPS)/configuration_window.d
+include $(DEPS)/configuration_window_moc.d
 include $(DEPS)/config_file.d
 include $(DEPS)/custom_input.d
 include $(DEPS)/custom_input_moc.d
@@ -293,6 +318,7 @@ include $(DEPS)/gadu_images_manager.d
 include $(DEPS)/gadu_rich_text.d
 include $(DEPS)/groups_manager.d
 include $(DEPS)/groups_manager_moc.d
+include $(DEPS)/hot_key.d
 include $(DEPS)/html_document.d
 include $(DEPS)/http_client.d
 include $(DEPS)/http_client_moc.d
@@ -313,6 +339,7 @@ include $(DEPS)/misc.d
 include $(DEPS)/misc_moc.d
 include $(DEPS)/modules.d
 include $(DEPS)/modules_moc.d
+include $(DEPS)/path_list_edit.d
 include $(DEPS)/pending_msgs.d
 include $(DEPS)/pending_msgs_moc.d
 include $(DEPS)/personal_info.d
@@ -323,10 +350,14 @@ include $(DEPS)/protocols_manager.d
 include $(DEPS)/protocols_manager_moc.d
 include $(DEPS)/search.d
 include $(DEPS)/search_moc.d
+include $(DEPS)/select_font.d
+include $(DEPS)/select_font_moc.d
 include $(DEPS)/status.d
 include $(DEPS)/status_moc.d
 include $(DEPS)/status_changer.d
 include $(DEPS)/status_changer_moc.d
+include $(DEPS)/syntax_editor.d
+include $(DEPS)/syntax_editor_moc.d
 include $(DEPS)/tabbar.d
 include $(DEPS)/tabbar_moc.d
 include $(DEPS)/themes.d
