--- a/varia/Makefile.am
+++ b/varia/Makefile.am
@@ -1,8 +1,14 @@
 
 install-data-local: uninstall-local
+	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/configuration"
+	$(INSTALL_DATA) configuration/*.ui "$(DESTDIR)$(datadir)/kadu/configuration"
+
 	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/themes/sounds/default/"
 	$(INSTALL_DATA) themes/sounds/default/*.wav "$(DESTDIR)$(datadir)/kadu/themes/sounds/default"
 	$(INSTALL_DATA) themes/sounds/default/sound.conf "$(DESTDIR)$(datadir)/kadu/themes/sounds/default"
+
+	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/syntax/infopanel"
+	$(INSTALL_DATA) syntax/infopanel/*.syntax "$(DESTDIR)$(datadir)/kadu/syntax/infopanel"
 
 	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/themes/icons/"
 	@for i_t in $(enabled_icon_themes); do \
@@ -33,12 +39,14 @@ install-data-local: uninstall-local
 		fi; \
 	done
 
-	$(mkinstalldirs) "$(DESTDIR)$(bindir)/"	
+	$(mkinstalldirs) "$(DESTDIR)$(bindir)/"
 	$(INSTALL_SCRIPT) scripts/kadu-mozilla "$(DESTDIR)$(bindir)/"
 	$(INSTALL_SCRIPT) scripts/kadu-config "$(DESTDIR)$(bindir)/"
 
 uninstall-local:
+	rm -f "$(DESTDIR)$(datadir)/kadu/configuration"/*
 	rm -f "$(DESTDIR)$(datadir)/kadu/themes/sounds/default"/*
+	rm -f "$(DESTDIR)$(datadir)/kadu/syntax/infopanel"/*.syntax
 	rm -rf "$(DESTDIR)$(datadir)/kadu/themes/icons"/*
 	rm -rf "$(DESTDIR)$(datadir)/kadu/themes/emoticons"/*
 	rm -f "$(DESTDIR)$(bindir)/kadu-mozilla"
