--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -81,7 +81,9 @@ SendPublicKey=encrypted.png
 OpenFile=fileopen.png
 AddToNotifyList=forward.png
 RemoveFromNotifyList=back.png
-Warning=msgbox_warning.png
+Warning=msgbox-warning.png
+Information=notify.png
+Critical=msgbox-critical.png
 LoadingImage=loading.png
 AboutIcon=abouticon.png
 CloseWindow=stop.png
