--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -77,6 +77,7 @@ UnregisterUser=deluser.png
 Mobile=mobile.png
 SendSms=mobile.png
 SendFile=filesave.png
+SendFileWindow=filesave.png
 SendPublicKey=encrypted.png
 OpenFile=fileopen.png
 AddToNotifyList=forward.png
